tests/snapshots/snapshots__budget_humanize_src_humanize_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4032 tokens)

__init__.py
     5→from humanize.filesize import naturalsize
     6→from humanize.i18n import activate, deactivate, decimal_separator, thousands_separator
     7→from humanize.lists import natural_list
     8→from humanize.number import (
     9→    apnumber,
    10→    clamp,
    11→    fractional,
    12→    intcomma,
    13→    intword,
    14→    metric,
    15→    ordinal,
    16→    scientific,
    17→)
    18→from humanize.time import (
    19→    naturaldate,
    20→    naturalday,
    21→    naturaldelta,
    22→    naturaltime,
    23→    precisedelta,
    24→)
    26→from ._version import __version__
    28→__all__ = [
    29→    "__version__",
    30→    "activate",
    31→    "apnumber",
    32→    "clamp",
    33→    "deactivate",
    34→    "decimal_separator",
    35→    "fractional",
      →    …

filesize.py
     5→from math import log
    36→def naturalsize(
    37→    value: float | str,
    38→    binary: bool = False,
    39→    gnu: bool = False,
    40→    format: str = "%.1f",
    41→) -> str:
    42→    """Format a number of bytes like a human-readable filesize (e.g. 10 kB).
    43→
    44→    By default, decimal suffixes (kB, MB) are used.
    45→
    46→    Non-GNU modes are compatible with jinja2's `filesizeformat` filter.
    47→
    48→    Examples:
    49→        ```pycon
    50→        >>> naturalsize(3000000)
    51→        '3.0 MB'
    52→        >>> naturalsize(300, False, True)
    53→        '300B'
    54→        >>> naturalsize(3000, False, True)
    55→        '2.9K'
    56→        >>> naturalsize(3000, False, True, "%.3f")
    57→        '2.930K'
    58→        >>> naturalsize(3000, True)
    59→        '2.9 KiB'
    60→        >>> naturalsize(10**28)
    61→        '10.0 RB'
    62→        >>> naturalsize(10**34 * 3)
    63→        '30000.0 QB'
    64→        >>> naturalsize(-4096, True)
    65→        '-4.0 KiB'
    66→
    67→        ```
    68→
    69→    Args:
    70→        value (int, float, str): Integer to convert.
    71→        binary (bool): If `True`, uses binary suffixes (KiB, MiB) with base
    72→            2<sup>10</sup> instead of 10<sup>3</sup>.
    73→        gnu (bool): If `True`, the binary argument is ignored and GNU-style
    74→            (`ls -sh` style) prefixes are used (K, M) with the 2**10 definition.
    75→        format (str): Custom formatter.
    76→
    77→    Returns:
    78→        str: Human readable representation of a filesize.
    79→    """
    80→    if gnu:
    81→        suffix = suffixes["gnu"]
    82→    elif binary:
    83→        suffix = suffixes["binary"]
    84→    else:
    85→        suffix = suffixes["decimal"]
    86→
    87→    base = 1024 if (gnu or binary) else 1000
    88→    bytes_ = float(value)
    89→    abs_bytes = abs(bytes_)
    90→
    91→    if abs_bytes == 1 and not gnu:
    92→        return f"{int(bytes_)} Byte"
    93→
    94→    if abs_bytes < base:
      →    …

i18n.py
     5→import gettext as gettext_module
     6→from threading import local
     8→TYPE_CHECKING = False
    10→    import os
    11→    import pathlib
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {
    40→def _get_default_locale_path() -> pathlib.Path | None:
    51→def get_translation() -> gettext_module.NullTranslations:
    52→    try:
    53→        return _TRANSLATIONS[_CURRENT.locale]
    54→    except (AttributeError, KeyError):
    55→        return _TRANSLATIONS[None]
    58→def activate(
    59→    locale: str | None, path: str | os.PathLike[str] | None = None
    60→) -> gettext_module.NullTranslations:
    61→    """Activate internationalisation.
    62→
    63→    Set `locale` as current locale. Search for locale in directory `path`.
    64→
    65→    Args:
    66→        locale (str | None): Language name, e.g. `en_GB`. If `None`, defaults to no
    67→            transaltion. Similar to calling ``deactivate()``.
    68→        path (str | pathlib.Path): Path to search for locales.
    69→
    70→    Returns:
    71→        dict: Translations.
    72→
    73→    Raises:
    74→        FileNotFoundError: If humanize cannot find the locale folder.
    75→    """
    76→    if locale is None or locale.startswith("en"):
    77→        _CURRENT.locale = None
    78→        return _TRANSLATIONS[None]
    79→
    80→    if path is None:
    81→        path = _get_default_locale_path()
    82→
    83→    if path is None:
    84→        msg = (
    85→            "Humanize cannot determinate the default location of the 'locale' folder. "
    86→            "You need to pass the path explicitly."
    87→        )
    88→        raise FileNotFoundError(msg)
      →        …
    96→def deactivate() -> None:
    97→    """Deactivate internationalisation."""
    98→    _CURRENT.locale = None
   101→def _gettext(message: str) -> str:
   113→def _pgettext(msgctxt: str, message: str) -> str:
   129→def _ngettext(message: str, plural: str, num: int) -> str:
   144→def _gettext_noop(message: str) -> str:
   163→def _ngettext_noop(singular: str, plural: str) -> tuple[str, str]:
   183→def thousands_separator() -> str:
   184→    """Return the thousands separator for a locale, default to comma.
   185→
   186→    Returns:
   187→         str: Thousands separator.
   188→    """
   189→    try:
   190→        sep = _THOUSANDS_SEPARATOR[_CURRENT.locale]
   191→    except (AttributeError, KeyError):
   192→        sep = ","
   193→    return sep
   196→def decimal_separator() -> str:
   197→    """Return the decimal separator for a locale, default to dot.
   198→
   199→    Returns:
   200→         str: Decimal separator.
   201→    """
   202→    try:
   203→        sep = _DECIMAL_SEPARATOR[_CURRENT.locale]
   204→    except (AttributeError, KeyError):
   205→        sep = "."
   206→    return sep

lists.py
     5→TYPE_CHECKING = False
     7→    from typing import Any
     9→__all__ = ["natural_list"]
    12→def natural_list(items: list[Any]) -> str:
    13→    """Natural list.
    14→
    15→    Convert a list of items into a human-readable string with commas and 'and'.
    16→
    17→    Examples:
    18→        >>> natural_list(["one", "two", "three"])
    19→        'one, two and three'
    20→        >>> natural_list(["one", "two"])
    21→        'one and two'
    22→        >>> natural_list(["one"])
    23→        'one'
    24→
    25→    Args:
    26→        items (list): An iterable of items.
    27→
    28→    Returns:
    29→        str: A string with commas and 'and' in the right places.
    30→    """
    31→    if len(items) == 1:
    32→        return str(items[0])
    33→    elif len(items) == 2:
    34→        return f"{str(items[0])} and {str(items[1])}"
    35→    else:
    36→        return ", ".join(str(item) for item in items[:-1]) + f" and {str(items[-1])}"

number.py
     5→import bisect
     7→from .i18n import _gettext as _
     8→from .i18n import _ngettext, decimal_separator, thousands_separator
     9→from .i18n import _ngettext_noop as NS_
    10→from .i18n import _pgettext as P_
    12→TYPE_CHECKING = False
    14→    from typing import TypeAlias
    21→def _format_not_finite(value: float) -> str:
    22→    """Utility function to handle infinite and nan cases."""
    23→    import math
    24→
      →…
    34→def ordinal(value: NumberOrString, gender: str = "male") -> str:
    35→    """Converts an integer to its ordinal as a string.
    36→
      →…
   110→def intcomma(value: NumberOrString, ndigits: int | None = None) -> str:
   111→    """Converts an integer to a string containing commas every three digits.
   112→
      →…
   195→def intword(value: NumberOrString, format: str = "%.1f") -> str:
   196→    """Converts a large integer to a friendly text representation.
   197→
      →…
   269→def apnumber(value: NumberOrString) -> str:
   270→    """Converts an integer to Associated Press style.
   271→
      →…
   321→def fractional(value: NumberOrString) -> str:
   322→    """Convert to fractional number.
   323→
      →…
   385→def scientific(value: NumberOrString, precision: int = 2) -> str:
   386→    """Return number in string scientific notation z.wq x 10ⁿ.
   387→
      →…
   454→def clamp(
   455→    value: float,
   456→    format: str = "{:}",
   457→    floor: float | None = None,
   458→    ceil: float | None = None,
   459→    floor_token: str = "<",
   460→    ceil_token: str = ">",
   461→) -> str:
   462→    """Returns number with the specified format, clamped between floor and ceil.
   463→
      →…
   531→def metric(value: float, unit: str = "", precision: int = 3) -> str:
   532→    """Return a value with a metric SI unit-prefix appended.
   533→
      →…

time.py
     8→from enum import Enum
     9→from functools import total_ordering
    11→from .i18n import _gettext as _
    12→from .i18n import _ngettext
    13→from .number import intcomma
    15→TYPE_CHECKING = False
    17→    import datetime as dt
    18→    from collections.abc import Iterable
    19→    from typing import Any
    21→__all__ = [
    22→    "naturaldate",
    23→    "naturalday",
    24→    "naturaldelta",
    25→    "naturaltime",
    26→    "precisedelta",
    27→]
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→
    41→    def __lt__(self, other: Any) -> Any:
    47→def _now() -> dt.datetime:
    53→def _abs_timedelta(delta: dt.timedelta) -> dt.timedelta:
    68→def _date_and_delta(
    69→    value: Any, *, now: dt.datetime | None = None, precise: bool = False
    70→) -> tuple[Any, Any]:
    95→def naturaldelta(
    96→    value: dt.timedelta | float,
    97→    months: bool = True,
    98→    minimum_unit: str = "seconds",
    99→) -> str:
   100→    """Return a natural representation of a timedelta or number of seconds.
   101→
   102→    This is similar to `naturaltime`, but does not add tense to the result.
   103→
   104→    The timedelta will be rounded to the nearest unit that makes sense.
   105→
   106→    Args:
      →    …
   249→def naturaltime(
   250→    value: dt.datetime | dt.timedelta | float,
   251→    future: bool = False,
   252→    months: bool = True,
   253→    minimum_unit: str = "seconds",
   254→    when: dt.datetime | None = None,
   255→) -> str:
   256→    """Return a natural representation of a time in a resolution that makes sense.
   257→
   258→    This is more or less compatible with Django's `naturaltime` filter.
   259→
   260→    The time will be rounded to the nearest unit that makes sense.
   261→
   262→    Args:
      →    …
   300→def _convert_aware_datetime(
   301→    value: dt.datetime | dt.timedelta | float | None,
   302→) -> Any:
   311→def naturalday(value: dt.date | dt.datetime, format: str = "%b %d") -> str:
   312→    """Return a natural day.
   313→
   314→    For date values that are tomorrow, today or yesterday compared to
   315→    present day return representing string. Otherwise, return a string
   316→    formatted according to `format`.
   317→
   318→    """
   343→def naturaldate(value: dt.date | dt.datetime) -> str:
   344→    """Like `naturalday`, but append a year for dates more than ~five months away."""
   361→def _quotient_and_remainder(
   362→    value: float,
   363→    divisor: float,
   364→    unit: Unit,
   365→    minimum_unit: Unit,
   366→    suppress: Iterable[Unit],
   367→    format: str,
   368→) -> tuple[float, float]:
   406→def _suitable_minimum_unit(min_unit: Unit, suppress: Iterable[Unit]) -> Unit:
   435→def _suppress_lower_units(min_unit: Unit, suppress: Iterable[Unit]) -> set[Unit]:
   451→def precisedelta(
   452→    value: dt.timedelta | float | None,
   453→    minimum_unit: str = "seconds",
   454→    suppress: Iterable[str] = (),
   455→    format: str = "%0.2f",
   456→) -> str:
   457→    """Return a precise representation of a timedelta or number of seconds.
   458→
   459→    ```pycon
   460→    >>> import datetime as dt
   461→    >>> from humanize.time import precisedelta
   462→
   463→    >>> delta = dt.timedelta(seconds=3633, days=2, microseconds=123000)
      →    …
   654→def _rounding_by_fmt(format: str, value: float) -> float | int:
